@@ -1,10 +1,6 @@
--pgdwn in preview/edit in card browser, both preview and edit (add to docs)
- qtextedit2,editcard, addcards, browsecards
--only do event filter when starting from card browser?
+-cntrl R for replay media
 
 -true comparison operators for criteria
-
--cntrl R for replay media
 
 -browser column width should be saved as soon as it changes, not on browser close 
  (even there it does not seem to work)
@@ -28,6 +24,8 @@
 
  -tip on double-click to tag names and cards to edit them
  -right click on tag names in browser
+ -When editing or previewing cards from the card browser, PageUp/PageDown can
+  be used to move to the previous/next card
 
  -popup on backlog during review
 
@@ -136,8 +134,8 @@ http://dotancohen.com/howto/rtl_right_to_left.html
 
 -Faq about how to pronounce Mnemosyne
 
--docs on keyboard shortcuts on website: grade buttons to 'show answer', PageUp-PageDown to scroll
- question/answer
+-docs on keyboard shortcuts on website: grade buttons to 'show answer', PageUp/PageDown to scroll
+ question/answer, PageUp/PageDown to change cards in preview/edit started from card browser
 
 -import
 -if txt import fails, give a useful error message showing the offending line
